Fixed : users search bar input alignment

--- a/style/UserStyle.css
+++ b/style/UserStyle.css
@@ -158,7 +158,6 @@
 
   .users input {
     width: 90%;
-    padding: 2px;
     border: none;
     font-size: 8px;
     float: left;
